--- a/manga_styles.css
+++ b/manga_styles.css
@@ -2,38 +2,38 @@
     text-align: center;
     padding-top: 50px;
 }
+
 .card {
     background-color: #2b2b2b;
     border-radius: 10px;
     padding: 20px;
     margin: 50px auto;
     text-align: center;
-    height: 700px; 
-   
+    height: 700px;
 }
+
+.card.theme-sensitive.light-mode {
+    background-color: #2e2833;
+    color: white;
+}
+
 #toggleThemeButton {
     font-size: 15px;
     font-weight: bold;
     color: #fff;
 }
+
 #toggleThemeButton:hover {
-    color: #000; 
-    background-color: #ffffff; 
-}
-body.light-mode {
-    background-color: #fafdf7;
-    color: #1e1e1e;
+    color: #000;
+    background-color: #ffffff;
 }
 
-body.dark-mode {
-    background-color: #121212;
-    color: #ffffff;
-}
 .card img {
     width: 100%;
-    height: 400px; 
-    object-fit: cover; 
+    height: 400px;
+    object-fit: cover;
 }
+
 footer {
     text-align: left;
     padding: 10px;
@@ -54,8 +54,407 @@ footer {
     top: -30px;
 }
 
+.number-circle.theme-sensitive.light-mode {
+    border: 2px solid #dbdfff;
+}
+
 .number-circle span {
     font-size: 24px;
     color: #fac550;
     font-weight: bold;
+}
+
+.number-circle span.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: #FFF0F5;
+}
+
+header {
+    background-color: #000;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+}
+
+header.theme-sensitive.light-mode {
+    background-color: #191230;
+}
+
+header a {
+    color: #B0B7FF;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 15px;
+}
+
+header a.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+header .logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #B0B7FF;
+}
+
+body.light-mode {
+    background-color: #FFF0F5;
+    color: #1e1e1e;
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+footer {
+    text-align: left;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+}
+
+header .btn {
+    font-size: 15px;
+    font-weight: bold;
+    color: #FFF0F5;
+}
+
+.nav-item:hover .nav-link {
+    color: #fac550;
+}
+
+.navbar-nav .nav-link.theme-sensitive.active.light-mode {
+    color: #9b9db3;
+}
+
+.nav-link.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+.nav-link.theme-sensitive.light-mode:hover {
+    color: #6e7085;
+}
+
+.nav-link {
+    color: #b0b7ff;
+    font-weight: bold;
+}
+
+.navbar-nav.nav-link.theme-sensitive.active {
+    color: #fac550;
+}
+
+.navbar-brand:hover {
+    color: #b0b7ff;
+}
+
+.navbar-brand {
+    color: #B0B7FF;
+    font-size: 23px;
+    margin-right: 280px;
+}
+
+.navbar-toggler {
+    background-color: white;
+}
+
+.main-content {
+    padding: 10px;
+}
+
+.spotlight {
+    position: relative;
+    height: 500px;
+    padding: 20px;
+}
+
+.spotlight h1 {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 100px;
+    margin-left: 18px;
+    color: #fac550;
+}
+
+h1.theme-sensitive.light-mode {
+    color: white;
+}
+
+h2.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+h2.theme-sensitive.dark-mode {
+    color: #fac550;
+}
+
+.spotlight .actions {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+footer.theme-sensitive.light-mode {
+    background-color: #262629;
+}
+
+.spotlight .actions button {
+    padding: 10px 20px;
+    margin-right: 150px;
+    background-color: #B0B7FF;
+    border: none;
+    color: #FFF0F5;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    margin-left: 10px;
+}
+
+.btn {
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+    background-color: #ffffff;
+}
+
+
+
+
+.spotlight-content {
+    position: relative;
+    padding: 20px;
+    color: #FFF0F5;
+    z-index: 1;
+    font-size: 30px;
+    bottom: 5px;
+    font-weight: bold;
+}
+
+.popular {
+    margin-top: 40px;
+}
+
+.section-title {
+    font-size: 32px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.anime-grid.theme-sensitive {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.anime-grid.theme-sensitive .anime-item {
+    flex: 1 1 calc(25% - 15px);
+    box-sizing: border-box;
+    background-color: #1e1e1e;
+    padding: 10px;
+    text-align: center;
+    color: #fac550;
+    text-decoration: none;
+}
+
+.anime-grid.theme-sensitive .anime-item.light-mode {
+    background-color: #2e2833;
+    color: #dbdfff
+}
+
+.anime-grid.theme-sensitive .anime-item.dark-mode {
+    background-color: #1e1e1e;
+}
+
+.anime-grid.theme-sensitive .anime-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.anime-grid.theme-sensitive .anime-item p {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.a {
+    color: #fac550;
+    text-decoration: none
+}
+
+.a.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+.anime-grid .anime-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.anime-grid .anime-item p {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.nav-link:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgb(0, 0, 0);
+    color: #fac550;
+}
+
+#toggleThemeButton {
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+}
+
+#toggleThemeButton:hover {
+    color: #000;
+    background-color: #ffffff;
+}
+
+.anime-grid {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.anime-item {
+    text-align: center;
+}
+
+.rating {
+    font-weight: bold;
+    color: #ffffff;
+    margin-left: 5px;
+}
+
+.rating.theme-sensitive.light-mode {
+    color: #f4f0f0;
+}
+
+#sort-options {
+    margin-top: 10px;
+    font-size: 18px;
+    text-align: right;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.sort-option {
+    cursor: pointer;
+    color: #B0B7FF;
+    padding: 5px;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+
+.sort-option.theme-sensitive.light-mode {
+    color: #1e1e1e
+}
+
+.sort-option:hover {
+    color: #fac550;
+}
+
+.sort-option.active {
+    color: #fac550;
+}
+
+.sort-option.active.light-mode {
+    color: #85214e;
+}
+
+.sort-option:hover.light-mode {
+    color: #85214e;
+}
+
+.extra-info {
+    display: none;
+    background-color: #1e1e1e;
+    color: #ffffff;
+    border-radius: 12px;
+    margin: 0 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.extra-info p {
+    margin: 5px 0;
+}
+
+.more-info-btn {
+    background-color: #434343;
+    color: #ffffff;
+    border: none;
+    border-radius: 12px;
+    margin: 0 30px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.more-info-btn:hover {
+    background-color: #353535;
+}
+
+.more-info-btn:disabled {
+    background-color: #6c757d;
+    cursor: not-allowed;
+}
+
+.more-info-btn.theme-sensitive.light-mode{
+    background-color: #4f505e;
+}
+
+.more-info-btn:hover.theme-sensitive.light-mode{
+    background-color: #41434e;
+}
+
+.extra-info.theme-sensitive.light-mode{
+    background-color: #201c23;
+}
+
+.extra-info strong{
+    color: #ffffff;
+}
+
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    header .logo {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    header a {
+        margin: 5px 0;
+    }
+
+    .navbar-nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
