--- a/tier_styles.css
+++ b/tier_styles.css
@@ -9,6 +9,11 @@
     color: white;
 }
 
+.anime-card.theme-sensitive.light-mode {
+    background-color: #2e2833;
+    color: white;
+}
+
 img {
     width: 70%;
     border-radius: 10px;
@@ -28,6 +33,10 @@ img {
     top: -30px;
 }
 
+.number-circle.theme-sensitive.light-mode {
+    border: 2px solid #dbdfff;
+}
+
 body.light-mode {
     background-color: #fafdf7;
     color: #1e1e1e;
@@ -42,6 +51,10 @@ body.dark-mode {
     font-size: 24px;
     color: #fac550;
     font-weight: bold;
+}
+
+.number-circle span.theme-sensitive.light-mode {
+    color: #dbdfff;
 }
 
 footer {
@@ -110,6 +123,396 @@ footer {
     color: #000;
     background-color: #ffffff;
 }
- 
-  
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: #FFF0F5;
+}
+
+header {
+    background-color: #000;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+}
+
+header.theme-sensitive.light-mode {
+    background-color: #191230;
+}
+
+header a {
+    color: #B0B7FF;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 15px;
+}
+
+header a.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+header .logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #B0B7FF;
+}
+
+body.light-mode {
+    background-color: #FFF0F5;
+    color: #1e1e1e;
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+footer {
+    text-align: left;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+}
+
+header .btn {
+    font-size: 15px;
+    font-weight: bold;
+    color: #FFF0F5;
+}
+
+.nav-item:hover .nav-link {
+    color: #fac550;
+}
+
+.navbar-nav .nav-link.theme-sensitive.active.light-mode {
+    color: #9b9db3;
+}
+
+.nav-link.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+.btn {
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+    background-color: #ffffff;
+}
+
+.nav-link.theme-sensitive.light-mode:hover {
+    color: #6e7085;
+}
+
+.nav-link {
+    color: #b0b7ff;
+    font-weight: bold;
+}
+
+.navbar-nav.nav-link.theme-sensitive.active {
+    color: #fac550;
+}
+
+.navbar-brand:hover {
+    color: #b0b7ff;
+}
+
+.navbar-brand {
+    color: #B0B7FF;
+    font-size: 23px;
+    margin-right: 280px;
+}
+
+.navbar-toggler {
+    background-color: white;
+}
+
+.main-content {
+    padding: 10px;
+}
+
+.spotlight {
+    position: relative;
+    height: 500px;
+    padding: 20px;
+}
+
+.spotlight h1 {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 100px;
+    margin-left: 18px;
+    color: #fac550;
+}
+
+.spotlight .actions {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.spotlight .actions button {
+    padding: 10px 20px;
+    margin-right: 150px;
+    background-color: #B0B7FF;
+    border: none;
+    color: #FFF0F5;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    margin-left: 10px;
+}
+
+.spotlight .actions .watch-now {
+    padding: 12px 24px;
+    background-color: #FFF0F5;
+    border: none;
+    color: #1e1e1e;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s, transform 0.2s;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    margin-right: 160px;
+    position: relative;
+    bottom: 40px;
+}
+
+.spotlight .actions .watch-now:hover {
+    background-color: #a59da1;
+    transform: scale(1.05);
+}
+
+.spotlight-img {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    filter: blur(4px) brightness(35%);
+}
+
+.spotlight-content {
+    position: relative;
+    padding: 20px;
+    color: #FFF0F5;
+    z-index: 1;
+    font-size: 30px;
+    bottom: 5px;
+    font-weight: bold;
+}
+
+.spotlight h1 {
+    font-size: 48px;
+    margin-top: 250px;
+}
+
+.spotlight p {
+    font-size: 18px;
+    max-width: 600px;
+    margin-top: 330px;
+}
+
+.spotlight .actions {
+    margin-top: 50px;
+}
+
+.spotlight .actions button {
+    padding: 10px 20px;
+    background-color: #B0B7FF;
+    margin-left: 1000px;
+
+    border: none;
+    color: #FFF0F5;
+
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.spotlight .actions button:hover {
+    background-color: #90919c;
+}
+
+.popular {
+    margin-top: 40px;
+}
+
+.section-title {
+    font-size: 32px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+
+.anime-grid.theme-sensitive {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.anime-grid.theme-sensitive .anime-item {
+    flex: 1 1 calc(25% - 15px);
+    box-sizing: border-box;
+    background-color: #1e1e1e;
+    padding: 10px;
+    text-align: center;
+    color: #fac550;
+    text-decoration: none;
+}
+
+footer.theme-sensitive.light-mode {
+    background-color: #262629;
+}
+
+.anime-grid.theme-sensitive .anime-item.light-mode {
+    background-color: #2e2833;
+    color: #dbdfff
+}
+
+.anime-grid.theme-sensitive .anime-item.dark-mode {
+    background-color: #1e1e1e;
+}
+
+.anime-grid.theme-sensitive .anime-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.anime-grid.theme-sensitive .anime-item p {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.a {
+    color: #fac550;
+    text-decoration: none
+}
+
+.a.theme-sensitive.light-mode {
+    color: #dbdfff;
+}
+
+.anime-grid .anime-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.anime-grid .anime-item p {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.nav-link:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgb(0, 0, 0);
+    color: #fac550;
+}
+
+#toggleThemeButton {
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+}
+
+#toggleThemeButton:hover {
+    color: #000;
+    background-color: #ffffff;
+}
+
+.anime-grid {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.anime-item {
+    text-align: center;
+}
+
+.rating {
+    font-weight: bold;
+    color: #ffffff;
+    margin-left: 5px;
+}
+
+.rating.theme-sensitive.light-mode {
+    color: #f4f0f0;
+}
+
+#sort-options {
+    margin-top: 10px;
+    font-size: 18px;
+    text-align: right;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.sort-option {
+    cursor: pointer;
+    color: #B0B7FF;
+    padding: 5px;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+
+.sort-option.theme-sensitive.light-mode {
+    color: #1e1e1e
+}
+
+.sort-option:hover {
+    color: #fac550;
+}
+
+.sort-option.active {
+    color: #fac550;
+}
+
+.sort-option.active.light-mode {
+    color: #85214e;
+}
+
+.sort-option:hover.light-mode {
+    color: #85214e;
+}
+
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    header .logo {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    header a {
+        margin: 5px 0;
+    }
+
+    .navbar-nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
   
